5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1575_1559.log
== TEST (2019-03-13 12:46:22) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(.upper(Ada Lovelace foi a primeira programadora da historia.))
-- ERROR:
File "XXXX", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:46:24) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(.upper(Ada Lovelace foi a primeira programadora da historia.))
-- EXECUTION TIME:
0.139618
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:52:51) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:52:54) 
-- CODE:
frase "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.133943
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase "Ada Lovelace foi a primeira programadora da historia."
                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:53:29) 
-- CODE:
frase =("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:53:31) 
-- CODE:
frase =("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper())
-- EXECUTION TIME:
0.183789
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
